# Lab1

src/: CMakeLists.txt  main.cpp
src/Trygonometria/: trygonometria.cpp  trygonometria.h
